refactory: using MassTransit

--- a/Rabbit.Api/appsettings.json
+++ b/Rabbit.Api/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "RabbitConfigs": {
+    "host": "localhost",
+    "User": "user",
+    "Pwd": "password"
+  },
   "AllowedHosts": "*"
 }
