refactory: Rabbit to MassTransit or Bus

--- a/Rabbit.Api/appsettings.json
+++ b/Rabbit.Api/appsettings.json
@@ -5,7 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "RabbitConfigs": {
+  "MassTransitConfigs": {
     "host": "localhost",
     "User": "user",
     "Pwd": "password"
