feat: origem message e normalizando algumas coisas

--- a/Rabbit.Api/appsettings.json
+++ b/Rabbit.Api/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "MassTransitConfigs": {
-    "host": "localhost",
+    "host": "rabbitmq://localhost",
     "User": "user",
     "Pwd": "password"
   },
