feat: job send message

--- a/Rabbit.Api/appsettings.json
+++ b/Rabbit.Api/appsettings.json
@@ -10,5 +10,8 @@
     "User": "user",
     "Pwd": "password"
   },
+    "JobConfigs": {
+        "CronExpression": "0 0/1 * 1/1 * ? *"
+    },
   "AllowedHosts": "*"
 }
