--- a/Rabbit.Api/Rabbit.Api.csproj
+++ b/Rabbit.Api/Rabbit.Api.csproj
@@ -11,6 +11,8 @@
     <PackageReference Include="MassTransit" Version="8.1.3" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.3" />
+    <PackageReference Include="Quartz" Version="3.8.0" />
+    <PackageReference Include="Quartz.Extensions.Hosting" Version="3.8.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
